--- a/views/default/create.html
+++ b/views/default/create.html
@@ -14,6 +14,7 @@
 <script>
     var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";    
     var default_url = "{{=URL('default', 'index')}}";
+    var image_url = "{{=URL('static', 'images/player_models')}}";
     
     function isJobModel(event) {
         var charCode = event.which;
@@ -48,9 +49,41 @@
         </div>
     </div>
     
-    <div class="container" style="background-color: white;">
+    <div class="container" style="background-color: white; margin-bottom: 5px;">
         
-        <div class="row">
+        
+        
+        <div v-if="showing_player_models">
+            
+<div class="container">
+    <div class="row">
+        <div class="col-md-12" style="padding: 0 !important; margin-bottom: 5px !important;">
+
+            <div class="closePlayerModels pointer pull-right">
+                <i v-on:click="close_player_models()" class="fa fa-close pointer" style="font-size: 36px;"></i>
+            </div>
+        </div>
+        
+    </div>    
+</div>
+        
+        <div v-for="(item, index) in player_models" class="row">
+            <div v-for="obj in item" class="col-md-3 col-sm-6 col-xs-12">
+                <div class="playerModel">
+                    <div style="padding: 10px 10px 0px 10px;" v-on:click="select_player_model(obj.model)">
+                        <img style="width: 100%;" v-bind:src="image_url + '/' + obj.image"/>
+                    </div>
+                    <div style="padding: 0px 10px 10px 10px;">
+                        <input class="form-control" style="margin-top: 10px;" type="text" v-bind:value="obj.model" disabled/>
+                    </div>
+                </div>
+            </div>  
+        </div>
+        
+            
+</div>
+        
+        <div v-if="!showing_player_models" class="row">
                 <div class="col-md-6 col-sm-6" style="margin-top: 10px; margin-bottom: 10px;">
 
                     <div class="form-group">
@@ -74,24 +107,30 @@
                     <div class="form-group">
                         <label for="job_model">Player model</label>
                         <br/>
-                        <job-model id="job_model" class="form-control" placeholder="models/player/kleiner.mdl" maxlength=100 onchange="APP.vue.job_model = $('#job_model').val();" onkeyup="APP.vue.job_model = $('#job_model').val();" onkeypress="return isJobModel(event);"></job-model>
+                        <job-model id="job_model" v-model="job_model" class="form-control" placeholder="models/player/kleiner.mdl" maxlength=100 onkeypress="return isJobModel(event);"></job-model>
+                        
+                        <div style="margin-top: 5px;">
+                            <span class="playerModelLink" v-on:click="show_player_models()">Browse player models</span>
+                        </div>
+                        
                         <div v-if="job_model_error" class="formError">${ job_model_error }</div>
                     </div>
                     
                     <div class="form-group">
-                        <label for="job_custom_model">Workshop ID for Custom Model</label>
+                        <label for="job_custom_model">Workshop Player Model</label>
                         
                         <input id="job_custom_model" class="form-control" placeholder="Steam Workshop URL or Workshop ID" maxlength=200 v-model="job_workshop"/>
                         <div v-if="job_workshop_error" class="formError">${ job_workshop_error }</div>
                         
-                        <label for="job_suggested_model" style="margin-top: 10px;">Suggested Model (For model packs)</label>
+                        <label for="job_suggested_model" style="margin-top: 10px;">Suggested Character</label>
                         
-                        <input id="job_suggested_model" class="form-control" placeholder="Deadpool" maxlength=200 v-model="job_suggested_model" v-on:keypress="isJobDescription"/>
-                        <div v-if="job_suggested_model_error" class="formError">${ job_suggested_model_error }</div>
+                        <input id="job_suggested_model" class="form-control" placeholder="Specify a character (e.g. Deadpool)" maxlength=200 v-model="job_suggested_model" v-on:keypress="isJobDescription"/>
                         
                         <div style="margin-top: 5px;">
                             <a href="https://steamcommunity.com/workshop/browse/?appid=4000&searchtext=&childpublishedfileid=0&browsesort=trend&section=readytouseitems&requiredtags%5B%5D=Model" target="_blank">Browse the Steam Workshop</a>
                         </div>
+                        
+                        <div v-if="job_suggested_model_error" class="formError">${ job_suggested_model_error }</div>
                     </div>
                     
                 </div>
@@ -169,7 +208,7 @@
         </div>
     </div>
 
-    <div class="container" style="margin-top: 5px; padding-right: 0px; padding-left: 0px;">
+    <div v-if="!showing_player_models" class="container" style="margin-top: 5px; padding-right: 0px; padding-left: 0px;">
         <div>
             <div style="margin-bottom: 10px; text-align: right;">
                 <input id="submit_share_button" class="submitButton" v-on:click="submit_share" type="button" value="Share" style="display: inline-block;"/>
@@ -178,7 +217,7 @@
         </div>
     </div>
 
-    <div class="container" style="">
+    <div v-if="!showing_player_models" class="container" style="">
         <div style="margin-left: 15%; margin-right: 15%; margin-bottom: 34px; background: white;">
             
             <div style="background-color: rgba(32, 32, 32);">
