--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -307,6 +307,18 @@ a.last::before {
     cursor: pointer;
 }
 
+.playerModelLinkEdit {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    background-color: transparent;
+}
+
+.playerModelLinkEdit:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .jobDescription {
     font-size: 18px;
     font-weight: bold;
@@ -359,7 +371,7 @@ a.last::before {
 }
 
 .commentError {
-    color: red;
+    color: #b70000;
     padding: 5px;
 }
 
