--- a/views/default/create.html
+++ b/views/default/create.html
@@ -9,7 +9,9 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 
-<script src="{{=URL('static', 'js/vue.js')}}"></script>
+<!-- <script src="{{=URL('static', 'js/vue.js')}}"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+
 
 <script>
     var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";    
