--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -4,6 +4,10 @@ html {box-sizing:border-box;}
 *, *:after, *:before {border:0; margin:0; padding:0; box-sizing:inherit;}
 html, body {max-width: 100vw; overflow-x: hidden}
 
+.leftSpaced {
+    margin-left: 5px;
+}
+
 .colorful {
     color: #bb8833;
 }
