--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -26,6 +26,7 @@ html, body {max-width: 100vw; overflow-x: hidden}
 
 .noBottomMargin {
     margin-bottom: 0px !important;
+    word-break: break-all;
 }
 
 #topRightTest {
