--- a/views/default/create.html
+++ b/views/default/create.html
@@ -1,103 +1,101 @@
 {{extend 'layout.html'}}
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
-
-<script src="{{=URL('static','js/tagify.js')}}"></script>
-<script src="{{=URL('static','js/jQuery.tagify.js')}}"></script>
-
-<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-
-<!-- <script src="{{=URL('static', 'js/vue.js')}}"></script> -->
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
-
-
-<script>
-    var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";    
-    var default_url = "{{=URL('default', 'index')}}";
-    var image_url = "{{=URL('static', 'images/player_models')}}";
+{{block head}}
+    <!-- Spectrum -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
     
-    function isJobModel(event) {
-        var charCode = event.which;
-
-        if(charCode === 32 || !(charCode == 46 || charCode == 47 || charCode == 95 || (charCode >= 65 && charCode <= 90) || (charCode >= 48 && charCode <= 57) || (charCode >= 97 && charCode <= 122))) {
-            return false;
-        } else {
-            return true;
-        }
-    }
-</script>
+    <!-- Tagify -->
+    <script src="{{=URL('static','js/tagify.js')}}"></script>
+    <script src="{{=URL('static','js/jQuery.tagify.js')}}"></script>
+    
+    <!-- jQuery UI -->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+    
+    <!-- Vue.js -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+    
+    <!-- Misc. JS -->
+    <script src="{{=URL('static','js/misc.js')}}"></script>
+    <script src="{{=URL('static', 'js/models_weps.js')}}"></script>
+    
+    <script>
+        var create_job_url = "{{=URL('api', 'create_job', user_signature=True)}}";    
+        var default_url = "{{=URL('default', 'index')}}";
+        var image_url = "{{=URL('static', 'images/player_models')}}";
+    </script>
+{{end}}
 
 <div id="vue-div" style="display: none;">
-
-<div class="mycontent" style="background-color: #e2e2e2;">
+    <div class="mycontent background">
     
-    <div class="container-fluid" style="background-color: rgba(32, 32, 32);">
-        <div class="container" style="padding-left: 0px !important;">
-            <div class="row" style="padding-top: 15px; padding-bottom: 15px;">
-                <div class="col-md-12">   
-                    <h2 style="color: white;">Create new job</h2>
+        <div class="container-fluid darkBackground">
+            <div class="container" style="padding-left: 0px !important;">
+                <div id="createJobRow" class="row">
+                    <div class="col-md-12"> 
+                        <h2 style="color: white;">Create new job</h2>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
         
-    <div class="container" style="background-color: #e2e2e2; padding-left: 0px !important;">
-        <div class="row no-gutters" style="padding-top: 15px; padding-bottom: 5px;">
-            <div class="col-md-12">
-                <span style="font-size: 12px; font-family: sans-serif; color: rgba(32, 32, 32, 0.5)">JOB INFORMATION</span>
+        <div id="jobInfoHeader" class="container">
+            <div id="jobInfoRow" class="row no-gutters">
+                <div class="col-md-12">
+                    <span id="jobInfoText">JOB INFORMATION</span>
+                </div>
             </div>
         </div>
-    </div>
     
-    <div class="container" style="background-color: white; margin-bottom: 5px;">
+        <div id="createJobContainer" class="container">
         
-        <div v-if="showing_player_models">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12" style="padding: 0 !important; margin-bottom: 10px !important;">
-                        <div class="closePlayerModels pointer pull-right">
-                            <i v-on:click="close_player_models()" class="fa fa-close pointer" style="font-size: 36px;"></i>
+            <div v-if="showing_player_models">
+                <div class="container">
+                    <div class="row">
+                        <div id="rowHeader" class="col-md-12">
+                            <div class="closePlayerModels pointer pull-right">
+                                <i v-on:click="close_player_models()" class="fa fa-close pointer" style="font-size: 36px;"></i>
+                            </div>
                         </div>
-                    </div>
-
-                </div>    
-            </div>
+                    </div>    
+                </div>
             
-            <div v-for="(item, index) in player_models" class="row">
-                <div v-for="obj in item" class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="playerModel">
-                        <div style="padding: 10px 10px 0px 10px;" v-on:click="select_player_model(obj.model)">
-                            <img style="width: 100%;" v-bind:src="image_url + '/' + obj.image"/>
+                <div v-for="(item, index) in player_models" class="row">
+                    <div v-for="obj in item" class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="playerModel">
+                            <div style="padding: 10px 10px 0px 10px;" v-on:click="select_player_model(obj.model)">
+                                <img style="width: 100%;" v-bind:src="image_url + '/' + obj.image"/>
+                            </div>
+                            <div style="padding: 0px 10px 10px 10px;">
+                                <input class="form-control" style="margin-top: 10px;" type="text" v-bind:value="obj.model" disabled/>
+                            </div>
                         </div>
-                        <div style="padding: 0px 10px 10px 10px;">
-                            <input class="form-control" style="margin-top: 10px;" type="text" v-bind:value="obj.model" disabled/>
-                        </div>
-                    </div>
-                </div>  
+                    </div>  
+                </div>
             </div>
-        </div>
         
-        <div id="job_info" v-if="!showing_player_models" class="row">
-                <div class="col-md-6 col-sm-6" style="margin-top: 10px; margin-bottom: 10px;">
+            <div id="job_info" v-if="!showing_player_models" class="row">
+                <div class="col-md-6 col-sm-6 margin10TopBottom">
 
                     <div class="form-group">
                         <label for="job_job_id">ID</label>
                         <input v-model="job_job_id" v-on:keypress="isJobID" id="job_job_id" class="form-control" placeholder="DOCTOR" maxlength=50/>
-                        <div v-if="job_job_id_error" class="formError">${ job_job_id_error }</div>
+                        
+                        <div v-if="job_errors.job_job_id != null" class="formError">${ job_errors.job_job_id }</div>
                     </div>
                     
                     <div class="form-group">
                         <label for="job_name">Name</label>
                         <input v-model="job_name" v-on:keypress="isJobName" id="job_name" class="form-control" placeholder="Doctor" maxlength=50/>
-                        <div v-if="job_name_error" class="formError">${ job_name_error }</div>
+                        
+                        <div v-if="job_errors.job_name != null" class="formError">${ job_errors.job_name }</div>
                     </div>
 
                     <div class="form-group">
                         <label for="job_description">Description</label>
                         <input v-model="job_desc" v-on:keypress="isJobDescription" id="job_description" class="form-control" placeholder="Heal the community." maxlength=50/>
-                        <div v-if="job_desc_error" class="formError">${ job_desc_error }</div>
+                        <div v-if="job_errors.job_desc != null" class="formError">${ job_errors.job_desc }</div>
                     </div>
                     
                     <div class="form-group">
@@ -110,14 +108,14 @@
                             <span class="playerModelLink" v-on:click="show_player_models()">Browse player models</span>
                         </div>
                         
-                        <div v-if="job_model_error" class="formError">${ job_model_error }</div>
+                        <div v-if="job_errors.job_model != null" class="formError">${ job_errors.job_model }</div>
                     </div>
                     
                     <div class="form-group">
                         <label for="job_custom_model">Workshop Player Model</label>
                         
                         <input id="job_custom_model" class="form-control" placeholder="Steam Workshop URL or Workshop ID" maxlength=200 v-model="job_workshop"/>
-                        <div v-if="job_workshop_error" class="formError">${ job_workshop_error }</div>
+                        <div v-if="job_errors.job_workshop != null" class="formError">${ job_errors.job_workshop }</div>
                         
                         <label for="job_suggested_model" style="margin-top: 10px;">Suggested Character</label>
                         
@@ -127,12 +125,12 @@
                             <a href="https://steamcommunity.com/workshop/browse/?appid=4000&searchtext=&childpublishedfileid=0&browsesort=trend&section=readytouseitems&requiredtags%5B%5D=Model" target="_blank">Browse the Steam Workshop</a>
                         </div>
                         
-                        <div v-if="job_suggested_model_error" class="formError">${ job_suggested_model_error }</div>
+                        <div v-if="job_errors.job_suggested_model != null" class="formError">${ job_errors.job_suggested_model }</div>
                     </div>
                     
                 </div>
                 
-                <div class="col-md-6 col-sm-6" style="margin-top: 10px; margin-bottom: 10px;">                    
+                <div class="col-md-6 col-sm-6 margin10TopBottom">                    
                     <div class="form-group">
                         <label for="job_color">Color</label>
                         <br/>
@@ -141,21 +139,21 @@
                             <color-it id="colorpicker" v-on:change="setRGB()" id="job_color" placeholder="" v-once></color-it>
                         </div>
                         
-                        <div v-if="job_color_error" class="formError">${ job_color_error }</div>
+                        <div v-if="job_errors.job_color != null" class="formError">${ job_errors.job_color }</div>
                     </div>
 
                     <div class="form-group">
                         <label for="job_salary">Salary</label>
                         <br/>
                         <input v-model="job_salary" id="job_salary" class="form-control" type="number" min=0 step=1 placeholder="45" value=""/>
-                        <div v-if="job_salary_error" class="formError">${ job_salary_error }</div>
+                        <div v-if="job_errors.job_salary != null" class="formError">${ job_errors.job_salary }</div>
                     </div>
 
                     <div class="form-group">
                         <label for="job_salary">Max players</label>
                         <br/>
                         <input v-model="job_max_players" id="job_max_players" class="form-control" type="number" min=1 step=1 placeholder="2" value=""/>
-                        <div v-if="job_max_players_error" class="formError">${ job_max_players_error }</div>
+                        <div v-if="job_errors.job_max_players != null" class="formError">${ job_errors.job_max_players }</div>
                     </div>
                     
                     <div class="form-group">
@@ -172,7 +170,7 @@
                         
                         <!-- Hidden input -->
                         <input id="job_tag" placeholder="" value="Citizen" type="hidden"/>
-                        <div v-if="job_tag_error" class="formError">${ job_tag_error }</div>
+                        <div v-if="job_errors.job_tag != null" class="formError">${ job_errors.job_tag }</div>
                     </div>
                     
                     <div class="form-group">
@@ -181,7 +179,7 @@
                         <tag-it id='weaponTags' name='tags' placeholder='Add weapon classes' value=''></tag-it>
                         <!-- Hidden input -->
                         <input v-model="job_weapons" id="job_weapons" placeholder="Add weapon classes" value="" type="hidden"/>
-                        <div v-if="job_weapons_error" class="formError">${ job_weapons_error }</div>
+                        <div v-if="job_errors.job_weapons != null" class="formError">${ job_errors.job_weapons }</div>
                     </div>
                     
                     <div class="form-group">
@@ -189,47 +187,52 @@
                         <br/>
                        
                         <div class="form-check">
-                            <div v-if="job_vote_error" class="formError">${ job_vote_error }</div>
+                        <div v-if="job_errors.job_vote != null" class="formError">${ job_errors.job_vote }</div>
                             <input v-model="job_vote" type="checkbox" class="form-check-input" id="job_vote">
                             <label for="job_vote" class="noBottomMargin noSelect">Vote?</label>
                         </div>
                         
                         <div class="form-check">
-                            <div v-if="job_admin_only_error" class="formError">${ job_admin_only_error }</div>
+                            <div v-if="job_errors.job_admin_only != null" class="formError">${ job_errors.job_admin_only }</div>
                             <input v-model="job_admin_only" type="checkbox" class="form-check-input" id="job_admin_only">
                             <label for="job_admin_only" class="noBottomMargin noSelect">Admin Only?</label>
                         </div>
                     </div>
-                    
                 </div>
-        </div>
-    </div>
-
-    <div v-if="!showing_player_models" class="container" style="margin-top: 5px; padding-right: 0px; padding-left: 0px;">
-        <div>
-            <div style="margin-bottom: 10px; text-align: right;">
-                <input id="submit_share_button" class="submitButton" v-on:click="submit_share" type="button" value="Share" style="display: inline-block;"/>
-                <input id ="submit_button" v-on:click="submit(false)" class="submitButton" type="button" value="Create" style="display: inline-block;"/>
             </div>
         </div>
-    </div>
 
-    <div v-if="!showing_player_models" class="container" style="">
-        <div style="margin-left: 15%; margin-right: 15%; margin-bottom: 34px; background: white;">
-            
-            <div style="background-color: rgba(32, 32, 32);">
-                <h5 style="color: white; margin-bottom: 0px; padding: 20px;"><b>Generated</b> code</h5>
-            </div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-12" style="padding: 0 !important;">
-            <div class="pull-right noSelect pointer" id="copyButton" v-on:click="copy_code" style="background-color: steelblue; color: white; padding: 5px 10px 5px 10px; border-bottom-left-radius: 4px;">Copy</div>
+        <div v-if="!showing_player_models" class="container">
+            <div class="row">
+                <div id="rowHeader" class="col-md-12">
+                    <div class="pointer pull-right">
+                        <input id="submit_share_button" class="submitButton" type="button" value="Share" v-on:click="submit_share"/>
+                        <input id ="submit_button" class="submitButton" type="button" value="Create" v-on:click="submit(false)"/>
+                    </div>
+                </div>
+            </div>    
         </div>
-    </div>    
-</div>
+        
 
-<pre style="padding: 0px 32px 32px 32px; margin-bottom: 0px;"><code><div id="genCode">TEAM_${job_job_id} = DarkRP.createJob(<span class="red">"${ job_name }"</span>, {
+        <div v-if="!showing_player_models" class="container">
+            <div id="codeDiv">
+
+                <div class="darkBackground">
+                    <h5 id="genCodeText"><b>Generated</b> code</h5>
+                </div>
+
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12" style="padding: 0 !important;">
+                            <div id="copyButton" class="pull-right noSelect pointer" v-on:click="copy_code">
+                                Copy
+                            </div>
+                        </div>
+                    </div>    
+                </div>
+
+                <pre class="preCode"><code><div id="genCode">TEAM_${job_job_id} = DarkRP.createJob(<span class="red">"${ job_name }"</span>, {
+    description = <span class="red">"${ job_desc }"</span>,
     color = Color(<span class="red">${ job_color_arr[0] }</span>, <span class="red">${ job_color_arr[1] }</span>, <span class="red">${ job_color_arr[2] }</span>),
     model = <span class="red">"${ job_model }"</span>,
     weapons = {<span v-for="(wep, index) in job_weapons_arr"><span class="red">"${ wep }"</span><span v-if="index != (job_weapons_arr.length-1)">, </span></span>},
@@ -238,14 +241,10 @@
     salary = <span class="red">${ job_salary }</span>,
     vote = <span class="blue">${ job_vote }</span>,
     admin = <span class="blue">${ job_admin_only }</span>
-})</div></code></pre>
-            
-     </div>
-</div>
-
+})</div></code></pre>   
+            </div>
+        </div>
     </div>
 </div>
 
-
-<!-- Vue JS -->
-<script src="{{=URL('static','js/default_index.js')}}"></script>
+<script src="{{=URL('static','js/default_index_create.js')}}"></script>
