--- a/views/layout.html
+++ b/views/layout.html
@@ -4,63 +4,63 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
-        
+
         <link rel="shortcut icon" href="{{=URL('static','favicon.ico')}}" type="image/x-icon">
-        
+
         <link href="{{=URL('static','css/myapp.css')}}" rel="stylesheet" type="text/css"/>
         <link href="{{=URL('static','css/tagify.css')}}" rel="stylesheet" type="text/css"/>
         <link href="{{=URL('static','css/web2py.css')}}" rel="stylesheet" type="text/css"/>
-        
+
         <link rel="stylesheet" href="{{=URL('static', 'font-awesome-4.6.3/css/font-awesome.min.css')}}">
         {{include "web2py_ajax.html"}}
-        
+
         <link href="{{=URL('static','css/bootstrap.css')}}" rel="stylesheet" type="text/css"/>
-        
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        
+
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
     </head>
 
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="{{=URL('default', 'index')}}">JobShare</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{=URL('default', 'index')}}">JobShare</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" id="homeLink" href="{{=URL('default', 'index', vars=dict(public='0'))}}">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="jobsLink" href="{{=URL('default', 'index', vars=dict(public='1'))}}">Community</a>
-      </li>
-    </ul>
-      <ul class="navbar-nav ml-auto">
-        {{if auth.user is not None:}}
-            <li class="nav-item dropdown ml-auto">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{=auth.user.username}}
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="{{=URL('default', 'user', args='profile')}}">Profile</a>
-                    <a class="dropdown-item" href="{{=URL('default', 'user', args='logout')}}">Logout</a>
-                </div>
-            </li>
-        {{else:}}
-            <li class="nav-item">
-                <a class="nav-link" href="{{=URL('default','user/login')}}">Sign in</a>
-            </li>
-        {{pass}}
-    </ul>
-  </div>
-</nav>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" id="homeLink" href="{{=URL('default', 'index', vars=dict(public='0'))}}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" id="jobsLink" href="{{=URL('default', 'index', vars=dict(public='1'))}}">Community</a>
+                </li>
+            </ul>
 
-
-    <body style="background-color: #e2e2e2;">
+            <ul class="navbar-nav ml-auto">
+                {{if auth.user is not None:}}
+                    <li class="nav-item dropdown ml-auto">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{=auth.user.username}}
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="{{=URL('default', 'user', args='profile')}}">Profile</a>
+                            <a class="dropdown-item" href="{{=URL('default', 'user', args='logout')}}">Logout</a>
+                        </div>
+                    </li>
+                {{else:}}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{=URL('default','user/login')}}">Sign in</a>
+                    </li>
+                {{pass}}
+            </ul>
+        </div>
+    </nav>
+    
+    <body class="background">
         {{include}}
     </body>
 </html>
