Began refactoring default_index_main.js

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -25,7 +25,7 @@
         var player_model_image_url = "{{=URL('static', 'images/player_models')}}";
         
         var jobs_url = "{{=URL('api', 'get_jobs')}}";
-        var community_url = "{{=URL('default', 'index')}}";
+        var main_url = "{{=URL('default', 'index')}}";
         var add_comment_url = "{{=URL('api', 'add_comment', user_signature=True)}}";
         var comments_url = "{{=URL('api', 'get_comments', user_signature=True)}}";
         var workshop_url = "{{=URL('api', 'workshop', user_signature=True)}}";
